// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlagConfigurationStep StepViewType.DeploymentForm it should render in DeploymentForm mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <h5
          class="StyledProps--font StyledProps--font-h5 StyledProps--main StyledProps--font-variation-h5"
          level="5"
        >
          cf.pipeline.flagConfiguration.flagChanges
        </h5>
      </div>
      <span />
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      aria-label="Submit"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`FlagConfigurationStep StepViewType.Edit it should render disabled in edit mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="universalInputNameWithId"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  test123
                </span>
              </div>
            </span>
          </span>
        </div>
        <div
          class="bp3-form-group bp3-disabled"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="FeatureFlagConfigurationForm_name"
            >
              cf.pipeline.flagConfiguration.stepName
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="name"
                type="text"
                value="Test 123"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-disabled"
      >
        <label
          class="bp3-label"
          for="spec.environment"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="FeatureFlagConfigurationForm_spec.environment"
          >
            cf.pipeline.flagConfiguration.selectEnvironment
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
          >
            <div
              class="TextInput--main MultiTypeInput--input"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  name="spec.environment"
                  placeholder="<+input>"
                  type="text"
                  value="<+input>"
                />
              </div>
            </div>
            <button
              class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
              data-testid="multi-type-button"
              disabled=""
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="runtime-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 10 7.97"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                    fill="current-color"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-disabled"
      >
        <label
          class="bp3-label"
          for="spec.feature"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="FeatureFlagConfigurationForm_spec.feature"
          >
            cf.pipeline.flagConfiguration.selectFlag
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
          >
            <div
              class="TextInput--main MultiTypeInput--input"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  name="spec.feature"
                  placeholder="<+input>"
                  type="text"
                  value="<+input>"
                />
              </div>
            </div>
            <button
              class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
              data-testid="multi-type-button"
              disabled=""
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="runtime-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 10 7.97"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                    fill="current-color"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <h5
            class="StyledProps--font StyledProps--font-h5 StyledProps--main StyledProps--font-variation-h5"
            level="5"
          >
            cf.pipeline.flagConfiguration.flagChanges
          </h5>
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                data-testid="runtime-fixed-selector-button"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon runtime"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main subSection StyledProps--padding-large"
          data-testid="flag-changes-runtime"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            cf.pipeline.flagConfiguration.flagChangesRuntime
          </p>
          <ul
            class="runtimeList"
          >
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeSetFlagSwitch
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeSetDefaultRules
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServeVariationToTargets
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServeVariationToTargetGroups
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServePercentageRollout
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FlagConfigurationStep StepViewType.Edit it should render in edit mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="universalInputNameWithId"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  test123
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="FeatureFlagConfigurationForm_name"
            >
              cf.pipeline.flagConfiguration.stepName
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                type="text"
                value="Test 123"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.environment"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="FeatureFlagConfigurationForm_spec.environment"
          >
            cf.pipeline.flagConfiguration.selectEnvironment
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
          >
            <div
              class="TextInput--main MultiTypeInput--input"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  name="spec.environment"
                  placeholder="<+input>"
                  type="text"
                  value="<+input>"
                />
              </div>
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  data-testid="multi-type-button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.feature"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="FeatureFlagConfigurationForm_spec.feature"
          >
            cf.pipeline.flagConfiguration.selectFlag
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
          >
            <div
              class="TextInput--main MultiTypeInput--input"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  name="spec.feature"
                  placeholder="<+input>"
                  type="text"
                  value="<+input>"
                />
              </div>
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  data-testid="multi-type-button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <h5
            class="StyledProps--font StyledProps--font-h5 StyledProps--main StyledProps--font-variation-h5"
            level="5"
          >
            cf.pipeline.flagConfiguration.flagChanges
          </h5>
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                data-testid="runtime-fixed-selector-button"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon runtime"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main subSection StyledProps--padding-large"
          data-testid="flag-changes-runtime"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            cf.pipeline.flagConfiguration.flagChangesRuntime
          </p>
          <ul
            class="runtimeList"
          >
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeSetFlagSwitch
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeSetDefaultRules
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServeVariationToTargets
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServeVariationToTargetGroups
            </li>
            <li>
              cf.pipeline.flagConfiguration.flagChangesRuntimeServePercentageRollout
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FlagConfigurationStep StepViewType.InputVariable it should render in InputVariable mode 1`] = `<div />`;
